syntax = "proto3";

package break_bricks.protoc;

import  "room_event.proto";

//golang编译出go文件的package命名空间
option go_package = "github.com/smallgamefish/BreakBricks/protoc";

//客户端发送udp的msg消息格式
message ClientSendMsg {
  oneof Event {
    CreateRoomEvent createRoomEvent = 1;  //创建房间事件
    JoinRoomEvent   joinRoomEvent = 2;    //加入房间事件
    LeaveRoomEvent  leaveRoomEvent = 3;  //离开房间事件
    ReadyEvent readyEvent = 4;   //准备事件
  }
}

//客户端接收udp的msg消息格式
message ClientAcceptMsg{
  enum Code {
    Success = 0;
    Error = 1;
  }

  Code code = 1;
  //code等于error时候的错误信息
  string error = 2;

  oneof Event {
    CreateRoomEvent createRoomEvent = 3;    //创建房间事件
    RefreshRoomPlayerEvent refreshRoomPlayerEvent = 4;  //刷新房间用户事件
    StartGameEvent startGameEvent = 5;   //开始游戏事件
  }
}