syntax = "proto3";

package break_bricks.protoc;

import  "player.proto";

//golang编译出go文件的package命名空间
option go_package = "github.com/smallgamefish/BreakBricks/protoc";


//创建房间事件
message CreateRoomEvent {
  string  roomId = 1;  //创建房间的id
}

//加入房间事件
message JoinRoomEvent {
  string roomId = 1;  //加入房间的id
}

//离开房间事件
message LeaveRoomEvent {
  string roomId = 1;  //离开房间的id
}

//刷新房间的玩家事件
message RefreshRoomPlayerEvent {
  repeated Player Players = 1;
}

//准备事件
message ReadyEvent {
  string roomId = 1;
  bool ready = 2;  //true准备，false取消准备
}

//开始游戏事件
message StartGameEvent {
  string name = 1;    //展示没有什么用
}